# cmake-abg

./: .gitignore  CMakeLists.txt  README.md
include/: config.h.in
src/: main.c
